Made class to remove extra space and fix alignment

--- a/css/style1.css
+++ b/css/style1.css
@@ -505,7 +505,8 @@ ul[class="droplist"]>li>div[class="description"] {
     transition: max-height 1s;
 }
 ul[class="droplist"]>li>div[class="description"]>p {
-    
+    padding: 0;
+    padding-top: 0.5em;
 }
 ul[class="droplist"]>li>div[class="heading"] {
     display: inline-block;
